Hacks for iOS5. 1. New scroll style in iOS6 doesn't work in 5, use iScroll instead (with preventDefault set to false). 2. 'width: 0' seems not override 'width: 100%' in iOS 5. 3. visibility: hidden/visible for .view class doesn't work propertly.

--- a/assets/scss/mobile/_forms.scss
+++ b/assets/scss/mobile/_forms.scss
@@ -11,7 +11,7 @@
 }
 
 @mixin inline-field-set {
-	width: 0;
+	width: 1px; // A hack for iOS 5. width=0 seems wrong.
 	border-width: 0 1px 0 0;
 	&:last-child {
 		border-right-width: 0;
