--- a/assets/scss/mobile/_layouts.scss
+++ b/assets/scss/mobile/_layouts.scss
@@ -21,13 +21,13 @@ body {
 	margin: 0;
 	overflow: hidden;
 	
-	z-index: 2;
-	visibility: visible;
+	//z-index: 2;
+	//visibility: visible;
 	&.view-hidden {
-		z-index: 0;
-		visibility: hidden;
+		//z-index: 0;
+		//visibility: hidden;
 		pointer-events: none;
-		@include transition(visibility $pageSwitchDuration ease-in-out $pageSwitchDuration);
+		//@include transition(visibility $pageSwitchDuration ease-in-out $pageSwitchDuration);
 	}
 	
 	& > .wrapper {
